--- a/index.html
+++ b/index.html
@@ -3,45 +3,49 @@
 
 <head>
 
+
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/fav-icon.svg" />
+  <link rel="icon" type="image/png" href="/Fav-icon-png.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Exbot</title>
 
 
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://exbot.in" />
+
 
   <!-- SEO Meta Tags -->
   <meta name="description"
-    content="Exbot is a smart and responsive WhatsApp chatbot assistant that helps users automate customer support, FAQs, and more.">
-  <meta name="keywords" content="WhatsApp chatbot, Exbot, chat automation, AI chatbot, customer support bot">
-  <meta name="author" content="Exbot Team">
+    content="Exbot is a smart and responsive WhatsApp chatbot assistant that helps users automate customer support, FAQs, and more." />
+  <meta name="keywords" content="WhatsApp chatbot, Exbot, chat automation, AI chatbot, customer support bot" />
+  <meta name="author" content="Exbot Team" />
 
 
 
-  <!-- Open Graph Meta Tags (for Facebook, LinkedIn, etc.) -->
-  <meta property="og:title" content="Exbot - Smart WhatsApp Chatbot Assistant">
+  <!-- Open Graph / Facebook / LinkedIn -->
+  <meta property="og:title" content="Exbot - Smart WhatsApp Chatbot Assistant" />
   <meta property="og:description"
-    content="Automate your customer support and sales using Exbot – a smart, fast, and reliable WhatsApp chatbot.">
-  <meta property="og:image" content="https://exbot.in/fav-icon.svg" />
+    content="Automate your customer support and sales using Exbot – a smart, fast, and reliable WhatsApp chatbot." />
+  <meta property="og:image" content="https://exbot.in/Fav-icon-png.png" />
   <meta property="og:url" content="https://exbot.in" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Exbot" />
 
 
 
-  <!-- Twitter Card Meta Tags -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Exbot - Smart WhatsApp Chatbot Assistant">
-  <meta name="twitter:description" content="Automate WhatsApp chats for support and sales with Exbot.">
-  <meta name="twitter:image" content="https://exbot.in/fav-icon.svg" />
-  <meta name="twitter:site" content="@YourTwitterHandle">
-
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Exbot - Smart WhatsApp Chatbot Assistant" />
+  <meta name="twitter:description" content="Automate WhatsApp chats for support and sales with Exbot." />
+  <meta name="twitter:image" content="https://exbot.in/Fav-icon-png.png" />
+  <meta name="twitter:site" content="@YourTwitterHandle" />
 
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 
 </head>
 
